<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ch.msacchi.gymplaner.NeuenPlanErstellen"
    tools:layout_editor_absoluteY="25dp"
    tools:layout_editor_absoluteX="0dp">


    <TextView
        android:id="@+id/neuenPlanSpeichern"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginTop="56dp"
        android:background="@color/myButtonBackground"
        android:gravity="center"
        android:text="@string/txtButton_Speichern"
        android:textColor="#000000"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cBplanFav"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <CheckBox
        android:id="@+id/cBplanFav"
        android:layout_width="279dp"
        android:layout_height="25dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="29dp"
        android:gravity="left|center"
        android:text="@string/checkbox_planAlsFavorit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eTneuerPlanName" />

    <EditText
        android:id="@+id/eTneuerPlanName"
        android:layout_width="276dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="37dp"
        android:ems="10"
        android:gravity="left|center"
        android:hint="@string/hint_PlanName"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
