<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ch.msacchi.gymplaner.NeuesGeraetErstellen">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="45dp">

        <TextView
            android:id="@+id/geraeteEinstellungen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/NeusGeraet_Einstellungen"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/trennlinie1" />

        <EditText
            android:id="@+id/etGeraetName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/geraeteName"
            tools:ignore="LabelFor" />

        <View
            android:id="@+id/trennlinie1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etGeraetName" />

        <TextView
            android:id="@+id/geraeteName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/NeusGeraet_Name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etGeraetEinstellungen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:minLines="4"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/geraeteEinstellungen"
            tools:ignore="LabelFor" />

        <View
            android:id="@+id/trennlinie2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etGeraetEinstellungen" />

        <TextView
            android:id="@+id/geraeteSetsWiederholungen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/NeusGeraet_SetsWiederholungen"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/trennlinie2" />

        <EditText
            android:id="@+id/etGeraetSetsWiederholungen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="7dp"
            android:ems="10"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:minLines="4"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/geraeteSetsWiederholungen"
            tools:ignore="LabelFor" />

        <View
            android:id="@+id/trennlinie3"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etGeraetSetsWiederholungen" />

        <TextView
            android:id="@+id/geraeteGewicht"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/NeusGeraet_Gewicht"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/trennlinie3" />

        <EditText
            android:id="@+id/etGeraetGewicht"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="7dp"
            android:ems="10"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:minLines="2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/geraeteGewicht"
            tools:ignore="LabelFor" />

        <ImageButton
            android:id="@+id/ibGeraetDelete"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:background="#00000000"
            android:contentDescription="Delete"
            android:scaleType="fitCenter"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/delet_trash" />

        <TextView
            android:id="@+id/tvGeraetSpeichern"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/dialog_planName_speichern"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvGeraetAbbrechen"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/tvGeraetAbbrechen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="32dp"
            android:text="@string/dialog_planName_abbrechen"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etGeraetGewicht"
            app:layout_constraintVertical_bias="0.0" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>
