<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlanNavigation">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/tv_plan_navi_name"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:gravity="center_vertical"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/hinweis_KlickenZumBearbeiten"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_plan_navi_name" />

    <View
        android:id="@+id/trennlinie1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Switch
        android:id="@+id/sw_plan_navi_fav"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:paddingEnd="0dp"
        android:paddingStart="1dp"
        android:text="@string/switchbox_planNavi"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/trennlinie1" />

    <ImageButton
        android:id="@+id/iv_plan_nav_plan_delete"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:background="#00000000"
        android:contentDescription="@string/txtButton_PlanLöschen"
        android:scaleType="fitCenter"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/delet_trash" />

    <View
        android:id="@+id/trennlinie2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@+id/sw_plan_navi_fav"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/emptyElement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hinweis_KeinGerätZugewiesen"
        android:textColor="#525252"
        android:textSize="14.0sp"
        android:visibility="gone"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/trennlinie2"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/trennlinie2" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_planNavi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/plus_withe"
        app:layout_constraintTop_toTopOf="@+id/lv_plan_navi"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        app:layout_constraintVertical_bias="0.80"
        tools:ignore="RtlHardcoded" />

    <ListView
        android:id="@+id/lv_plan_navi"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trennlinie2"
        app:layout_constraintVertical_bias="0.0" />


</android.support.constraint.ConstraintLayout>
